add language toggle component

--- a/frontend/src/components/NavbarComponent.css
+++ b/frontend/src/components/NavbarComponent.css
@@ -2,3 +2,8 @@ nav > * {
 	font-family: "Helvetica Narrow", "Arial Narrow", Tahoma, Arial, Helvetica,
 		sans-serif;
 }
+
+.btn-xs {
+	padding: 2px;
+	font-size: 15px;
+}
